# Congruent

./: .gitignore  Congruent-Foundational-Doc.md  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  bench_recall.py  bench_scaling.py  fuzz.py  numpy_oracle.py  realpy_fuzz.py
docs/: live_run.md
examples/: README.md  all_positive.py  clamp_range.py  closed_loop_demo.py  count_positives.py  has_negative.py  keep_positives.py  list_maximum.py  live_rewrite.py  midpoint.c  midpoint_overflow.py  polyval.py  run_gallery.py  string_greeting.py  sum_0_to_n.py  water_bill.py
src/congruent/: __init__.py  backends.py  cfront.py  cli.py  difftest.py  equiv.py  ir.py  refine.py  report.py  solver.py  symbolic.py
tests/: test_arrays.py  test_benchmarks.py  test_cfront.py  test_cli.py  test_cross_check.py  test_difftest.py  test_early_exit.py  test_equiv.py  test_examples.py  test_fuzz.py  test_ir.py  test_list_output.py  test_minimize.py  test_numpy_oracle.py  test_realpy_oracle.py  test_refine.py  test_regressions.py  test_strings.py  test_symbolic.py
tests/fixtures/: README.md  abs_branch.py  array_count_off_by_one.py  array_first.py  array_len_count.py  array_sum_reorder.py  contains.py  distribute.py  list_filter_bug.py  loop_off_by_one.py  loop_reorder.py  map_double.py  midpoint_overflow.py  off_by_one.py  str_concat_order.py  str_count_char.py  sum_to_n.py
