[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "congruent"
version = "0.0.1"
description = "Prove behavioral equivalence between an original function and an AI-rewritten one within bounds, or return the concrete input that breaks it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Satchel Hamilton" }]
keywords = [
  "equivalence-checking",
  "formal-methods",
  "smt",
  "z3",
  "symbolic-execution",
  "bounded-model-checking",
  "ai-codegen",
  "verification",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
congruent = "congruent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/congruent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
