[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "congruent-eq"
version = "0.0.1"
description = "Prove behavioral equivalence between an original function and an AI-rewritten one within bounds, or return the concrete input that breaks it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Satchel Hamilton" }]
keywords = [
  "equivalence-checking",
  "formal-methods",
  "smt",
  "z3",
  "symbolic-execution",
  "bounded-model-checking",
  "ai-codegen",
  "verification",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
]
# Optional second solver for `--cross-check` (independent verdict confirmation).
cross-check = [
  "cvc5>=1.1",
]
# Optional C front end (check C function pairs).
c = [
  "pycparser>=2.21",
]
# Optional LLM closed loop (AI proposes a rewrite, Congruent verifies) — see refine.py.
llm = [
  "anthropic>=0.40",
]
# Optional independent fixed-width oracle for the fuzzer (numpy's C-level two's-
# complement arithmetic checks the wrapping model) — see benchmarks/numpy_oracle.py.
oracle = [
  "numpy>=1.26",
]

[project.scripts]
congruent = "congruent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/congruent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "B905",   # zip(..., strict=): lengths are guaranteed equal by construction here
  "UP042",  # Status(str, Enum) is intentional (JSON-friendly string values)
]

[tool.ruff.lint.per-file-ignores]
# test fixtures and the fuzzer embed long source-string literals / IR builders
"tests/*" = ["E501"]
"benchmarks/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
# z3-solver, cvc5, and pycparser ship no type stubs, and the symbolic
# interpreter is necessarily dynamic (values are bitvectors / arrays / Python
# objects), so we type-check pragmatically rather than strictly.
ignore_missing_imports = true
warn_unused_ignores = true

# The concrete interpreter walks runtime-typed Python values (int / bool / list /
# str), so static typing fights it; its correctness is covered by the fuzzer and
# the test suite instead.
[[tool.mypy.overrides]]
module = "congruent.difftest"
ignore_errors = true
